<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app_vertical_gradient"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_setting_back"
            android:contentDescription="@string/setting_back"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/setting_accent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/setting"
            android:textColor="@color/setting_text_primary"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@id/imv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imv_back" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_back">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting_card"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_4sdp">

                <RelativeLayout
                    android:id="@+id/rlt_language"
                    style="@style/SettingRow">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_language"
                        style="@style/SettingIcon"
                        android:src="@drawable/ic_language" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingLabel"
                        android:layout_toEndOf="@id/imv_language"
                        android:text="@string/language" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingChevron"
                        android:text="›" />
                </RelativeLayout>

                <View style="@style/SettingDivider" />

                <RelativeLayout
                    android:id="@+id/rlt_rate"
                    style="@style/SettingRow">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_rate"
                        style="@style/SettingIcon"
                        android:src="@drawable/ic_rate" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingLabel"
                        android:layout_toEndOf="@id/imv_rate"
                        android:text="@string/rate" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingChevron"
                        android:text="›" />
                </RelativeLayout>

                <View style="@style/SettingDivider" />


                <RelativeLayout
                    android:id="@+id/rlt_share"
                    style="@style/SettingRow">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_share"
                        style="@style/SettingIcon"
                        android:src="@drawable/ic_share" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingLabel"
                        android:layout_toEndOf="@id/imv_share"
                        android:text="@string/share_with_friend" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingChevron"
                        android:text="›" />
                </RelativeLayout>

                <View style="@style/SettingDivider" />

                <RelativeLayout
                    android:id="@+id/rlt_policy"
                    style="@style/SettingRow">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_policy"
                        style="@style/SettingIcon"
                        android:src="@drawable/ic_policy" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingLabel"
                        android:layout_toEndOf="@id/imv_policy"
                        android:text="@string/privacy_policy" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SettingChevron"
                        android:text="›" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
