<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_surface"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingVertical="@dimen/_20sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_splash"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/img_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/rounded_corner" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/enjoying_hd_camera"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate_us_on_the_google_play"
                android:textColor="#FFAFA5C3"
                android:textSize="@dimen/_11sdp" />

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/simpleRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:srb_clickable="true"
                app:srb_drawableEmpty="@drawable/ic_star_empty"
                app:srb_drawableFilled="@drawable/ic_star_filled"
                app:srb_numStars="5"
                app:srb_rating="0"
                app:srb_scrollable="true"
                app:srb_starHeight="@dimen/_32sdp"
                app:srb_starPadding="@dimen/_6sdp"
                app:srb_starWidth="@dimen/_32sdp"
                app:srb_stepSize="1" />

            <LinearLayout
                android:id="@+id/layoutFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext_feedback"
                    android:fontFamily="@font/outfit_regular"
                    android:hint="@string/feedback_reason_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="#FFFDFDFD"
                    android:textColorHint="#FF6F6794"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_edittext_feedback"
                    android:fontFamily="@font/outfit_regular"
                    android:gravity="top"
                    android:hint="@string/feedback_description_hint"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColor="#FFFDFDFD"
                    android:textColorHint="#FF6F6794"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnRateNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_dialog_primary_button"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate_now"
                android:textColor="#FFFFFFFF"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnNotNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_btn_dialog_cancel"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/outfit_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/not_now"
                android:textColor="#FFAFA5C3"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </FrameLayout>
</layout>