<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_surface"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingVertical="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_46sdp"
                android:layout_height="@dimen/_46sdp"
                android:background="@drawable/bg_dialog_icon"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/ic_sparkles" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/promo_code_title"
                android:textColor="@color/setting_text_primary"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:text="@string/promo_code_description"
                android:textColor="@color/setting_text_secondary"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_edittext_promo_code"
                android:fontFamily="@font/outfit_medium"
                android:hint="@string/promo_code_hint"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_14sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#FF6B657D"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/outfit_medium"
                android:textColor="#FFFF6A6A"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_dialog_cancel"
                    android:fontFamily="@font/outfit_semi_bold"
                    android:gravity="center"
                    android:text="@string/txt_cancel"
                    android:textColor="@color/setting_text_secondary"
                    android:textSize="@dimen/_13sdp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_redeem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_dialog_primary_button"
                        android:fontFamily="@font/outfit_bold"
                        android:gravity="center"
                        android:text="@string/promo_code_redeem"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/white"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
