<?xml version="1.0" encoding="utf-8"?>
<com.pegas.yuki.virtual.chat.ui.component.custom.BlurLoadingLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <eightbitlab.com.blurview.BlurTarget
        android:id="@+id/blurTarget"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/blurSourceImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </eightbitlab.com.blurview.BlurTarget>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_290sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_dialog_surface"
            android:padding="@dimen/_20sdp">

            <ImageView
                android:id="@+id/animNoInternet"
                android:layout_width="@dimen/_72sdp"
                android:layout_height="@dimen/_72sdp"
                android:background="@drawable/bg_dialog_icon"
                android:contentDescription="@null"
                android:padding="@dimen/_16sdp"
                android:src="@drawable/ic_no_internet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/setting_accent" />

            <TextView
                android:id="@+id/txtNoInternet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/no_internet_title"
                android:textColor="@color/setting_text_primary"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/animNoInternet" />

            <TextView
                android:id="@+id/txtNoInternetDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/manrope_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/no_internet_message"
                android:textColor="@color/setting_text_secondary"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtNoInternet" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnOpenSettings"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/bg_dialog_primary_button"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/open_settings"
                android:textColor="@color/setting_text_primary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtNoInternetDesc" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </eightbitlab.com.blurview.BlurView>
</com.pegas.yuki.virtual.chat.ui.component.custom.BlurLoadingLayout>
